--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js",
-    "build":"npm install && npm install --prefix client && npm run build --prefix client"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
