--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "build":"npm install && npm install --prefix client && npm run build --prefix"
   },
   "author": "",
   "license": "ISC",
