--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "build":"npm install && npm install --prefix client && npm run build --prefix"
+    "build":"npm install --prefix ./client && npm run build --prefix ./client && npm install"
   },
   "author": "",
   "license": "ISC",
