--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "build":"npm install --prefix ./client && npm run build --prefix ./client && npm install"
+    "dev": "nodemon server/index.js",
+    "start": "node server/index.js",
+    "build":"npm install && npm install --prefix client && npm run build --prefix client "
   },
   "author": "",
   "license": "ISC",
