--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,17 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.7",
     "firebase": "^10.12.2",
+    "@remixicon/react": "^4.6.0",
+    "react-countup": "^6.5.3",
+    "react-intersection-observer": "^9.16.0",
+    "react-player": "^2.16.0",
+    "swiper": "^11.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "redux-persist": "^6.0.0",
-    "swiper": "^11.1.4"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
